objects/Mass_Deal_Change__c.object
<CustomObject>
    <description>Logs changes to a Deal&apos;s Schedule when made from the Deal Revisions page.</description>
    <fields>
        <fullName>Changed_Cap__c</fullName>
        <label>Changed Cap</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_Daypart__c</fullName>
        <label>Changed Daypart</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_Days_Allowed__c</fullName>
        <label>Changed Days Allowed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_Max_Per_Day__c</fullName>
        <label>Changed Max Per Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Changed_Rate__c</fullName>
        <label>Changed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Changed_Start_End_Time__c</fullName>
        <label>Changed Start End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_Units_Available__c</fullName>
        <label>Changed Units Available</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Mass Deal Changes</relationshipLabel>
        <relationshipName>Mass_Deal_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LTC_Date__c</fullName>
        <label>LTC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Cap__c</fullName>
        <label>Original Cap</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Daypart__c</fullName>
        <label>Original Daypart</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Days_Allowed__c</fullName>
        <label>Original Days Allowed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Max_Per_Day__c</fullName>
        <label>Original Max Per Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Rate__c</fullName>
        <label>Original Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Start_End_Time__c</fullName>
        <label>Original Start End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Units_Available__c</fullName>
        <label>Original Units Available</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedules__c</fullName>
        <description>List of Schedule Names that were affected by the change</description>
        <label>Schedules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab__c</fullName>
        <label>Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>Rate</fullName>
                </value>
                <value>
                    <fullName>Extend</fullName>
                </value>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Cap</fullName>
                </value>
                <value>
                    <fullName>Daypart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_End__c</fullName>
        <label>Week End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Start__c</fullName>
        <label>Week Start</label>
        <type>Date</type>
    </fields>
    <label>Mass Deal Change</label>
    <nameField>
        <displayFormat>MD-{000000}</displayFormat>
        <label>Mass Deal Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Deal Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>